--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
 </head>
 <body>
     <section class="container-fluid kanban">
-       
-            <div class="grid">
-                <div id="board" class="board">
-                    <div class="board-header">
-                        <h1>Kanban board</h1>
-                        <button class="create-column">Add a column</button>
-                    </div>
-                    <div class="column-container"></div>
+        <div class="grid">
+            <div id="board" class="board">
+                <div class="board-header">
+                    <h1>Kanban board</h1>
+                    <button class="create-column">Add a column</button>
                 </div>
-            </div>            
-        
+                <div class="column-container"></div>
+            </div>
+        </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
     <script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/Column.js"></script>
+    <script type="text/javascript" src="js/Card.js"></script>
+    <script type="text/javascript" src="js/Board.js"></script>
+    <script type="text/javascript" src="js/App.js"></script>
+    <!-- <script type="text/javascript" src="js/script.js"></script> -->
 </body>
 </html>
